--- a/saes/index.html
+++ b/saes/index.html
@@ -1167,7 +1167,9 @@ between features with highly correlated attributions, but further investigation 
         The results I presented suggested that this hypothesis held for betweenness centrality.
         I felt that this was the key takeaway result from the analysis and warrants further work.</li></ul>
 <p>
-Additionally, I had some general thoughts on the overall analysis:
+More broadly, this project has been an interesting first step in exploring
+feature relationships through network analysis.
+I'll try to capture a few general thoughts succinctly below:
 </p>
       <ul>
       <li>I think that applying network analysis and, in particular, looking
