--- a/saes/index.html
+++ b/saes/index.html
@@ -120,7 +120,7 @@
       <p>Over the past few months, I’ve been doing a fairly deep dive into AI
       safety and alignment—a topic that’s become harder to ignore as machine
       learning continues to advance. During the time I’ve spent working as an
-      ML scientist, I’ve come to realise more and more that, while building
+      Machine Learning scientist, I’ve come to realise more and more that, while building
       smarter and more capable models is exciting, understanding the risks and
       ensuring these models behave as expected is just as crucial. This led me
       to enroll in the <a
@@ -194,8 +194,7 @@
       just completing coursework:</p>
       <ol type="1">
       <li>I wanted to up-skill in this area, learning to use relevant libraries
-      and gaining a deeper understanding of how to work with sparse auto-encoders
-      (SAEs).</li>
+      and gaining a deeper understanding of how to work with SAEs.</li>
       <li>I hoped to explore an interesting question within mechanistic
         interpretability that allowed me to leverage my background in
         neuroscience.</li>
@@ -274,7 +273,7 @@
       on this project with several key questions in mind: </p>
       <ol type="1">
       <li>Can we uncover
-      structure between sparse autoencoder (SAE) features by examining
+      structure SAE features by examining
       co-occurrence patterns, specifically through correlations between
       feature attribution values?</li>
       <li>How can we leverage feature
@@ -296,8 +295,7 @@
         <li>H3: Centrality metrics of features will be indicative of feature importance.</li></ul>
 
       <h3 id="tools">Tools</h3>
-      <p>This project will focus on analysing language models using sparse
-      auto-encoders (SAEs), a technique that has recently gained popularity in
+      <p>This project will focus on analysing language models using SAEs, a technique that has recently gained popularity in
       the field of mechanistic interpretability. SAEs offer a promising
       approach to uncovering the internal workings of these complex,
       hard-to-interpret systems. For a good introduction to SAEs, I recommend
@@ -309,7 +307,7 @@
       href="https://transformer-circuits.pub/2022/toy_model/index.html">polysemanticity
       and superposition</a>, if you’re not already familiar with these, to
       understand the problem that SAEs are trying to solve.</p>
-      <p>Very briefly, sparse auto-encoders are neural networks trained to
+      <p>Very briefly, SAEs are neural networks trained to
       reconstruct their input while enforcing sparsity in their hidden layer.
       This sparsity constraint often results in the network learning more
       interpretable and disentangled representations of the input data. In the
@@ -319,8 +317,7 @@
       Interpretability community:</p>
       <ol type="1">
       <li><a href="https://github.com/jbloomAus/SAELens">SAE Lens</a>: A
-      toolkit specifically designed for working with sparse
-      auto-encoders.</li>
+      toolkit specifically designed for working with SAEs</li>
       <li><a
       href="https://github.com/TransformerLensOrg/TransformerLens">TransformerLens</a>:
       A library for the analysis of transformer-based language models.</li>
