fixed header caps

--- a/saes/index.html
+++ b/saes/index.html
@@ -267,7 +267,7 @@
       <p><strong>New to Mechanistic Interpretability, want to learn something and want to find out about
       the results:</strong></p>
       <ul><li>Read everything!</li></ul>
-      <h2 id="experiments-and-findings">Experiments and findings</h2>
+      <h2 id="experiments-and-findings">Experiments and Findings</h2>
       <h3 id="key-questions">Project Overview and Key Questions</h3>
       <p>This project delves into the realm of mechanistic interpretability
         in machine learning, with a specific focus on analysing relationships between
@@ -384,7 +384,7 @@ Three key questions guided this exploration:
       cheaply. It was generated using <a
       href="https://raw.githubusercontent.com/ali-ce/datasets/master/Most-paid-athletes/Athletes.csv">a
       list of the highest-paid athletes</a> and the respective sports that they play.</p>
-      <h3 id="task-performance">Task performance</h3>
+      <h3 id="task-performance">Task Performance</h3>
       <p>The first thing I wanted to do was assess how the model performed on
       the task. There are several different metrics that can be used to evaluate
       performance, including:</p>
@@ -427,7 +427,7 @@ Three key questions guided this exploration:
         on their data science skills and as a Brit—that I didn’t notice this
         sooner. However, I don't think it will significantly impact the
         results, as language models tend to be predominantly US-centric anyway.</em></p>
-      <h3 id="feature-co-occurrence">Feature co-occurrence</h3>
+      <h3 id="feature-co-occurrence">Feature Co-occurrence</h3>
       <p>Now that the task is set, let’s get stuck into the more interesting
         aspects! The first step to determine if there is any structure in
         feature co-occurrence is, unsurprisingly, to run multiple prompts
@@ -487,7 +487,7 @@ Three key questions guided this exploration:
       so let’s keep going and see if we can find any
       meaningful structure in these correlations.</p>
       <h3 id="network-based-clustering-of-features-by-co-activations">Network
-      based clustering of features by co-activations</h3>
+      Based Clustering of Features by Co-activations</h3>
       <p>Looking at a correlation matrix like the one above can be pretty
       overwhelming, especially when you have a high number of variables or
       features that you’re comparing. One good way to make sense of all the
@@ -572,7 +572,7 @@ Three key questions guided this exploration:
       correlations. However, the plotting algorithm also takes
       into consideration the aesthetics and readability of the layout so let’s
       move on to examine the cluster properties empirically. </p>
-      <h3 id="metrics-across-feature-clusters">Metrics across feature clusters</h3>
+      <h3 id="metrics-across-feature-clusters">Metrics Across Feature Clusters</h3>
       <p>It’s useful to calculate metrics that can help us to understand
       properties of the network. In the stock market example we discussed
       earlier, these could be stocks that have far-reaching influence across
@@ -703,8 +703,8 @@ Three key questions guided this exploration:
         <span class="math inline"><em>p</em> &lt; 0.05 : *,<em>p</em> &lt; 0.01 :  * *,<em>p</em> &lt; 0.001 :  *  * *</span></em>
     </div>
 
-      <h3 id="feature-steering-and-ablation">Feature steering and
-      ablation</h3>
+      <h3 id="feature-steering-and-ablation">Feature Steering and
+      Ablation</h3>
       <p>One really cool thing you can do with SAEs is to steer or ablate
       features. Feature steering involves deliberately manipulating
       activations to influence the output of the model. We can take a feature
@@ -777,7 +777,7 @@ Three key questions guided this exploration:
         intuition about how certain features can affect model predictions.
         I definitely suggest giving it a try if you're
         interested in this area.</p>
-      <h3 id="assessing-feature-importance-through-feature-steering">Assessing feature importance through feature steering</h3>
+      <h3 id="assessing-feature-importance-through-feature-steering">Assessing Feature Importance Through Feature Steering</h3>
       <p>A big question I wanted to answer was whether
       there were significant differences in the importance of the
       features that belonged to the different clusters. As mentioned earlier,
@@ -867,7 +867,7 @@ Three key questions guided this exploration:
       value of activation shift (1, 10 and 30 respectively). With this
       established, I moved on to the final two
       (and hopefully more interesting) experiments</p>
-      <h3 id= "steering-multiple-features">Steering multiple features</h3>
+      <h3 id= "steering-multiple-features">Steering Multiple Features</h3>
       <p>I feel like there is only so much to be learned from perturbing single
         features and I was especially interested in exploring interaction
         effects between
@@ -968,7 +968,7 @@ Three key questions guided this exploration:
       single feature by a large amount. Of course, I have no idea whether this
       claim is true and this observation is limited to a narrow context.</p>
 
-      <h3 id= "centrality-and-feature-importance">Centrality and feature importance</h3>
+      <h3 id= "centrality-and-feature-importance">Centrality and Feature Importance</h3>
       <p>TThe final aspect I examined was how the centrality of a feature
         affects model performance when the feature is negatively steered.
         The hypothesis is that steering features with high
@@ -1246,7 +1246,7 @@ from this work:
       require significant resources and effort to achieve key
       breakthroughs that could meaningfully impact AI alignment and safety.</li>
       </ul>
-      <h3 id="taking-it-forward">Taking it forward</h3>
+      <h3 id="taking-it-forward">Taking it Forward</h3>
       <p>There are several directions I’d like to explore further, as mentioned above. I’ll try to be brief again:</p>
       <ul>
       <li>If given more time, my first priority would be to test
@@ -1271,7 +1271,7 @@ from this work:
       approaches and broader 'zooming out' perspectives will be crucial for
       meaningful progress in AI alignment and safety efforts.
       </p>
-      <h3 id="thank-yous">Thank yous</h3>
+      <h3 id="thanks">Thanks</h3>
       <p>A few quick acknowledgements. A big thank you to <a
       href="https://aisafetyfundamentals.com/alignment/">BlueDot for running
       an amazing course</a> and in particular my cohort facilitator <a
@@ -1299,8 +1299,8 @@ from this work:
       know if you find any issues or have any questions about it.</p>
 
 
-      <h3 id="appendix-high-maximum-activation-features">Quick appendix: High
-      maximum activation features</h2>
+      <h3 id="appendix-high-maximum-activation-features">Quick Appendix: High
+      Maximum Activation Features</h2>
       <p>Earlier in the analysis, I briefly discussed 5 features that had
       anomalously high maximum activations. I planned to look into these 5
       features in more detail, but in the end it didn’t really fit in to the
