--- a/saes/index.html
+++ b/saes/index.html
@@ -241,12 +241,12 @@
       interested in.</p>
       <p> <strong>Strong Mechanistic Interpretability background, just want to get the gist</strong>:</p>
       <ul>
-      <li>Read the <a href="#key-questions">‘Key questions’</a>, <a href="#models">‘Models’</a> and <a href="#task">‘Task’</a> sections to set the
+      <li>Read the <a href="#key-questions">‘Key Questions’</a>, <a href="#models">‘Models’</a> and <a href="#task">‘Task’</a> sections to set the
       context.</li>
-      <li>Skim the <a href="#feature-co-occurrence">‘Feature co-occurrence’</a>, <a href="#network-based-clustering-of-features-by-co-activations">‘Network based clustering of features by co-activations’</a> and
-        <a href="#feature-steering-and-ablation">‘Feature steering and ablation’</a> sections for the main methods.</li>
-     <li>Read the <a href="#steering-multiple-features">‘Steering multiple features’</a>
-    and <a href="#centrality-and-feature-importance">‘Centrality and feature importance’</a> section for the main
+      <li>Skim the <a href="#feature-co-occurrence">‘Feature Co-occurrence’</a>, <a href="#network-based-clustering-of-features-by-co-activations">‘Network Based Clustering of Features by Co-activations’</a> and
+        <a href="#feature-steering-and-ablation">‘Feature Steering and Ablation’</a> sections for the main methods.</li>
+     <li>Read the <a href="#steering-multiple-features">‘Steering Multiple Features’</a>
+    and <a href="#centrality-and-feature-importance">‘Centrality and Feature Importance’</a> section for the main
     results.</li>
       </ul>
       <p><strong>New to Mechanistic Interpretability, want to learn something but are more interested in
@@ -254,15 +254,15 @@
       <ul>
       <li>Read the <a href="#tools">‘Tools’</a> section for some ways to
       start exploring MI.</li>
-      <li>Read the <a href="#feature-co-occurrence">‘Feature co-occurrence’</a> and <a href="#feature-steering-and-ablation">‘Feature
-      steering and ablation’</a> sections for some information about attribution,
+      <li>Read the <a href="#feature-co-occurrence">‘Feature Co-occurrence’</a> and <a href="#feature-steering-and-ablation">‘Feature
+      Steering and Ablation’</a> sections for some information about attribution,
       steering and ablation.</li>
     </ul>
       <p><strong>Just curious about Network Analysis:</strong></p>
       <ul>
         <li>Read the
-      <a href="#network-based-clustering-of-features-by-co-activations">‘Network based clustering of features by co-activations’</a>, <a href="#metrics-across-feature-clusters">‘Metrics
-      across feature clusters’</a> and <a href="#centrality-and-feature-importance">‘Centrality and feature importance’</a>
+      <a href="#network-based-clustering-of-features-by-co-activations">‘Network Based Clustering of Features by Co-activations’</a>, <a href="#metrics-across-feature-clusters">‘Metrics
+      Across Feature Clusters’</a> and <a href="#centrality-and-feature-importance">‘Centrality and Feature Importance’</a>
       sections.</li></ul>
       <p><strong>New to Mechanistic Interpretability, want to learn something and want to find out about
       the results:</strong></p>
